css/tooplate-style.css
/* ... */
.lb-dataContainer:after {
  content: "";
  display: table;
  clear: both;
}

.lb-data {
  padding: 0 4px;
  color: #ccc;
}

.lb-data .lb-details {
  width: 85%;
  float: left;
  text-align: left;
  line-height: 1.1em;
}

.lb-data .lb-caption {
  font-size: 13px;
  font-weight: bold;
  line-height: 1em;
}

.lb-data .lb-caption a {
  color: #4ae;
}

.lb-data .lb-number {
  display: block;
  clear: left;
  padding-bottom: 1em;
  font-size: 12px;
  color: #999999;
}

.lb-data .lb-close {
  display: block;
  float: right;
  width: 30px;
  height: 30px;
  background: url(../img/close.png) top right no-repeat;
  text-align: right;
  outline: none;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
  opacity: 0.7;
  -webkit-transition: opacity 0.2s;
  -moz-transition: opacity 0.2s;
  -o-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.lb-data .lb-close:hover {
  cursor: pointer;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
  opacity: 1;
}

.clipped {
    clip-path: circle();
		margin-left: -105px;
}


#com{
	background-size: 100%;
	background-repeat: no-repeat;
	padding-top: 300px;
	overflow-y: hidden;
}
#list-about{
	font-weight: normal;
}

#proj{
	    border: 3px solid rgba(0,0,0,0.2);
		  width: 200px;
			height: 200px;
}
#selfpic{
	width:230px;
	margin-left:auto;
	margin-top: 20px;"
}
.category-header {
    text-align: center;
    font-size: 30px;
    color: #1A222C;
    margin-bottom: 20px;
		font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    line-height: 1.1;
}
#section-skills {
    text-align: center;
    font-weight: 600;
    margin-bottom: 20px;
		font-family: 'Montserrat', sans-serif;
}
.skill {
    position: relative;
    height: 35px;
    max-width: 400px;
    left: 50%;
    transform: translateX(-50%);
}
.skill .rating {
    float: right;
    font-size: 18px;
    color: #337ab7;
}


@media screen and (max-width: 480px) {
    .right-info {
         width: 200px;
				 margin-left:22.5%;
    }
}

@media screen and (max-width: 480px) {
    #p4 .right-info i{
         background-color:#aeaeae
    }
}
@media screen and (max-width: 1400px) {
    #p3 .project-item i{
         margin-left:-1.5%;

    }
}
@media screen and (max-width: 800px) {
    #proj{
         height:140px;
				 width:140px;
    }
}
@media screen and (max-width: 480px) {
    #p4 .right-info{
         margin-left:13%;
				 margin-top:-5%;
    }
}
@media screen and (max-width: 480px) {
       #selfpic{
         width:150px
    }
}
#p2pic{
	background-repeat: no-repeat;
	background-size: cover;
	position: absolute;
	left:-20px;
	height:380px;
	right:-20px;
	font-family: garamond;
	color:#d9d9d9;
}
@media screen and (max-width: 480px) {
       #p2pic{
         height:250px;
				 font-family: garamond;
			 	 color:#d9d9d9;
				 font-size:30px;
    }
}
@media screen and (max-width: 480px){
   	#about-desc{
			margin-top: -60%;
	    margin-left: -5%;
}
#p2name{
	margin-top:6%;
	font-size:30px;
}

